Changing format for clarity and passing tests

--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -66,7 +66,11 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
-    nginx.ingress.kubernetes.io/server-snippet: "keepalive_timeout 60s; grpc_read_timeout 60s; grpc_send_timeout 60s; client_body_timeout 60s;"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      keepalive_timeout 60s;
+      grpc_read_timeout 60s;
+      grpc_send_timeout 60s;
+      client_body_timeout 60s;
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
   labels:
     app: app1
@@ -104,7 +108,11 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
-    nginx.ingress.kubernetes.io/server-snippet: "keepalive_timeout 60s; grpc_read_timeout 60s; grpc_send_timeout 60s; client_body_timeout 60s;"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      keepalive_timeout 60s;
+      grpc_read_timeout 60s;
+      grpc_send_timeout 60s;
+      client_body_timeout 60s;
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
     app: app1
