--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: version
-      run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
+      run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
     - name: changelog
       id: changelog
       run: |
@@ -77,11 +77,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: version
-      run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
+      run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
     - name: name
-      run: echo "::set-env name=RACK_NAME::ci-$(date +"%Y%m%d%H%M%S")"
+      run: echo "RACK_NAME=ci-$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
     - name: provider
-      run: echo "::set-env name=PROVIDER::${{ matrix.provider }}"
+      run: echo "PROVIDER=${{ matrix.provider }}" >> $GITHUB_ENV
     - name: secrets
       run: ci/secrets.sh
       env:
