--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -520,6 +520,21 @@ metadata:
   namespace: rack1-app1
 type: Opaque
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations: null
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: agent
+    system: convox
+    type: serviceaccount
+  name: agent
+  namespace: rack1-app1
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -587,6 +602,7 @@ spec:
         - mountPath: /etc/convox
           name: ca
       hostNetwork: true
+      serviceAccountName: agent
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 30
       volumes:
@@ -650,6 +666,21 @@ metadata:
   namespace: rack1-app1
 type: Opaque
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations: null
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: deployment
+    system: convox
+    type: serviceaccount
+  name: deployment
+  namespace: rack1-app1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -682,6 +713,7 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations: null
       labels:
         app: app1
         name: deployment
@@ -713,6 +745,7 @@ spec:
         volumeMounts:
         - mountPath: /etc/convox
           name: ca
+      serviceAccountName: deployment
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 30
       volumes:
@@ -747,6 +780,21 @@ metadata:
   namespace: rack1-app1
 type: Opaque
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations: null
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: singleton
+    system: convox
+    type: serviceaccount
+  name: singleton
+  namespace: rack1-app1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -779,6 +827,7 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations: null
       labels:
         app: app1
         name: singleton
@@ -810,6 +859,7 @@ spec:
         volumeMounts:
         - mountPath: /etc/convox
           name: ca
+      serviceAccountName: singleton
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 30
       volumes:
@@ -845,6 +895,21 @@ metadata:
   namespace: rack1-app1
 type: Opaque
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations: null
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: web
+    system: convox
+    type: serviceaccount
+  name: web
+  namespace: rack1-app1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -877,6 +942,7 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations: null
       labels:
         app: app1
         name: web
@@ -940,6 +1006,7 @@ spec:
         volumeMounts:
         - mountPath: /etc/convox
           name: ca
+      serviceAccountName: web
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 30
       volumes:
@@ -1000,6 +1067,21 @@ metadata:
   namespace: rack1-app1
 type: Opaque
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations: null
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: web2
+    system: convox
+    type: serviceaccount
+  name: web2
+  namespace: rack1-app1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -1032,6 +1114,7 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations: null
       labels:
         app: app1
         name: web2
@@ -1095,6 +1178,7 @@ spec:
         volumeMounts:
         - mountPath: /etc/convox
           name: ca
+      serviceAccountName: web2
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 30
       volumes:
