--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       matrix:
         provider:
           - aws
-          - azure
+          # - azure
           - do
           - gcp
     steps:
