--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,60 +8,60 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v1
-    - name: version
-      run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
-    - name: changelog
-      id: changelog
-      run: |
-        changelog=$(git log --pretty="* %s" ...$(git describe --abbrev=0 HEAD~))
-        echo ${changelog}
-        changelog="${changelog//'%'/'%25'}"
-        changelog="${changelog//$'\n'/'%0A'}"
-        changelog="${changelog//$'\r'/'%0D'}"
-        echo "::set-output name=text::${changelog}"
-    - name: release
-      id: release
-      uses: ddollar/create-release@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        body: ${{ steps.changelog.outputs.text }}
-        prerelease: true
-        release_name: "${{ env.VERSION }}"
-        tag_name: ${{ env.VERSION }}
-    - name: tools
-      run: make tools
-    - name: cli
-      run: make -C cmd/convox build
-    - name: build
-      run: docker build -t convox/convox:${VERSION} .
-    - name: login
-      run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-    - name: push
-      run: docker push convox/convox:${VERSION}
-    - name: release-cli-linux
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.release.outputs.upload_url }}
-        asset_path: ./cmd/convox/pkg/convox-linux-amd64
-        asset_name: convox-linux
-        asset_content_type: application/octet-stream
-    - name: release-cli-macos
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.release.outputs.upload_url }}
-        asset_path: ./cmd/convox/pkg/convox-darwin-10.6-amd64
-        asset_name: convox-macos
-        asset_content_type: application/octet-stream
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: version
+        run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
+      - name: changelog
+        id: changelog
+        run: |
+          changelog=$(git log --pretty="* %s" ...$(git describe --abbrev=0 HEAD~))
+          echo ${changelog}
+          changelog="${changelog//'%'/'%25'}"
+          changelog="${changelog//$'\n'/'%0A'}"
+          changelog="${changelog//$'\r'/'%0D'}"
+          echo "::set-output name=text::${changelog}"
+      - name: release
+        id: release
+        uses: ddollar/create-release@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          body: ${{ steps.changelog.outputs.text }}
+          prerelease: true
+          release_name: "${{ env.VERSION }}"
+          tag_name: ${{ env.VERSION }}
+      - name: tools
+        run: make tools
+      - name: cli
+        run: make -C cmd/convox build
+      - name: build
+        run: docker build -t convox/convox:${VERSION} .
+      - name: login
+        run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: push
+        run: docker push convox/convox:${VERSION}
+      - name: release-cli-linux
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-linux-amd64
+          asset_name: convox-linux
+          asset_content_type: application/octet-stream
+      - name: release-cli-macos
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.6-amd64
+          asset_name: convox-macos
+          asset_content_type: application/octet-stream
   ci:
     needs: release
     runs-on: ubuntu-latest
@@ -69,36 +69,36 @@ jobs:
       fail-fast: false
       matrix:
         provider:
-        - aws
-        - azure
-        - do
-        - gcp
+          - aws
+          # - azure
+          - do
+          - gcp
     steps:
-    - name: checkout
-      uses: actions/checkout@v1
-    - name: version
-      run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
-    - name: name
-      run: echo "RACK_NAME=ci-$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
-    - name: provider
-      run: echo "PROVIDER=${{ matrix.provider }}" >> $GITHUB_ENV
-    - name: secrets
-      run: ci/secrets.sh
-      env:
-        SECRETS: ${{ toJson(secrets) }}
-    - name: dependencies
-      run: ci/dependencies.sh
-    - name: cli
-      run: ci/cli.sh
-    - name: install
-      run: ci/install.sh
-    - name: wait
-      run: sleep 600
-    - name: test
-      run: ci/test.sh
-    - name: debug
-      run: ci/debug.sh
-      if: always()
-    - name: uninstall
-      run: ci/uninstall.sh
-      if: always()
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: version
+        run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
+      - name: name
+        run: echo "RACK_NAME=ci-$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
+      - name: provider
+        run: echo "PROVIDER=${{ matrix.provider }}" >> $GITHUB_ENV
+      - name: secrets
+        run: ci/secrets.sh
+        env:
+          SECRETS: ${{ toJson(secrets) }}
+      - name: dependencies
+        run: ci/dependencies.sh
+      - name: cli
+        run: ci/cli.sh
+      - name: install
+        run: ci/install.sh
+      - name: wait
+        run: sleep 600
+      - name: test
+        run: ci/test.sh
+      - name: debug
+        run: ci/debug.sh
+        if: always()
+      - name: uninstall
+        run: ci/uninstall.sh
+        if: always()
