k8s: Add timers to process list, and include timers in log collection

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -41,6 +41,11 @@
 			pattern ^(.+)$
 			tag service.$1
 		</rule>
+		<rule>
+			key $.kubernetes.labels.timer
+			pattern ^(.+)$
+			tag timer.$1
+		</rule>
 	</match>
 
 	<match service.**>
