fix fluentd for cri logging

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -7,7 +7,7 @@
 	tag container.*
 	read_from_head false
 	<parse>
-		@type json
+		@type cri
 		time_format %Y-%m-%dT%H:%M:%S.%NZ
 	</parse>
 </source>
