dont run other providers for gcp test

--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -17,9 +17,9 @@ jobs:
       fail-fast: false
       matrix:
         provider:
-          - aws
+          #- aws
           # - azure
-          - do
+          #- do
           - gcp
     steps:
       - name: checkout
