use sudo for cli update

--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -37,7 +37,7 @@ jobs:
       - name: cli
         run: ci/cli.sh
       - name: cli-update
-        run: convox update 
+        run: sudo convox update 
       - name: install
         run: ci/install.sh
       - name: wait
