--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -1,9 +1,8 @@
 name: daily test
 
 env:
-  #VERSION: 3.0.49 # @TODO: Automate to get the latest stable tag: https://bit.ly/3krkRNN
+  VERSION: 3.0.49 # @TODO: Automate to get the latest stable tag: https://bit.ly/3krkRNN
                   # NOTE: convox update is run below so test are run on latest release
-  VERSION: gcp-auth-fix
 
 on:
   schedule:
@@ -17,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         provider:
-          #- aws
+          - aws
           # - azure
-          #- do
+          - do
           - gcp
     steps:
       - name: checkout
