Add fluentd multi parser for cri and json formats

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -7,8 +7,15 @@
 	tag container.*
 	read_from_head false
 	<parse>
-		@type cri
-		time_format %Y-%m-%dT%H:%M:%S.%NZ
+		@type multi_format
+		<pattern>
+			format cri
+			time_format %Y-%m-%dT%H:%M:%S.%NZ
+		</pattern>
+		<pattern>
+			format json
+			time_format %Y-%m-%dT%H:%M:%S.%NZ
+		</pattern>
 	</parse>
 </source>
 
