--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -5,7 +5,8 @@
 	exclude_path ["/var/log/containers/cloudwatch-agent*", "/var/log/containers/fluentd*"]
 	pos_file /var/log/fluentd-containers.log.pos
 	tag container.*
-	read_from_head false
+	read_from_head true
+	follow_inodes true
 	<parse>
 		@type multi_format
 		<pattern>
