--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,15 @@ jobs:
           asset_path: ./cmd/convox/pkg/convox-linux-amd64
           asset_name: convox-linux
           asset_content_type: application/octet-stream
+      - name: release-cli-linux-arm64
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-linux-arm64
+          asset_name: convox-linux-arm64
+          asset_content_type: application/octet-stream
       - name: release-cli-macos
         uses: actions/upload-release-asset@v1.0.1
         env:
@@ -67,6 +76,15 @@ jobs:
           upload_url: ${{ steps.release.outputs.upload_url }}
           asset_path: ./cmd/convox/pkg/convox-darwin-10.12-amd64
           asset_name: convox-macos
+          asset_content_type: application/octet-stream
+      - name: release-cli-macos-arm64
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.12-arm64
+          asset_name: convox-macos-arm64
           asset_content_type: application/octet-stream
   ci:
     if: github.repository == 'convox/convox'
